# Pilot

./: .gitignore  CMakeLists.txt  HowToUse
src/: main.cpp
src/ChatGPT/: ChatGPT.cpp  ChatGPT.h
src/SpeechToText/: AudioCapture.cpp  AudioCapture.h  Base64.cpp  Base64.h  ElevenLabsSttClient.cpp  ElevenLabsSttClient.h
